syntax = "proto3";

import "key_cell.proto";

option java_package = "merail.life.word.store.impl";
option java_multiple_files = true;

message KeyField {
  repeated KeyCell key_field = 1;
}